--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaResource">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="tomcat-learn/lib/source"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-beanutils.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-collections.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-daemon.jar"/>
-	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-digester.jar" sourcepath="lib/source/commons-digester3-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-digester.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-logging.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/commons-modeler.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/jaas.jar"/>
@@ -17,15 +23,9 @@
 	<classpathentry kind="lib" path="web/WEB_INF/lib/naming-common.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/naming-factory.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/naming-resources.jar"/>
-	<classpathentry kind="lib" path="web/WEB_INF/lib/servlet.jar" sourcepath="lib/source/javax.servlet-api-4.0.0-sources.jar"/>
+	<classpathentry kind="lib" path="web/WEB_INF/lib/servlet.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/tomcat-util.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="web/WEB_INF/lib/xmlParserAPIs.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaResource">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="tomcat-learn/lib/source"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
